--- a/frontend/main.css
+++ b/frontend/main.css
@@ -54,4 +54,5 @@ body {
     justify-items: center;
     justify-content: center;
     align-items: center;
+    transition: background-color 0.3s ease;
 }
