--- a/frontend/main.css
+++ b/frontend/main.css
@@ -1,37 +1,60 @@
-body {
-    background-color: rgb(230, 230, 230);
-    font-family: 'Inter', sans-serif;
-    font-size: 1.5rem;
+:root {
+    --bg-color: #FCFFFD;
+    --border-color: rgb(163, 165, 170);
+    --aquamarine: #a5ffd6ff;
+    --battleship-gray: #817f75ff;
+}
+
+html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
-    width: 100%;
+    background-color: var(--bg-color);
+    font-family: 'Inter', sans-serif;
     overflow-x: hidden;
 }
 
-.gen-container {
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    font-size: 1.5rem;
+    width: 100%;
+}
+
+.navbar {
+  height: 8vh;
+  background-color: var(--bg-color);
+  border: 1px solid var(--border-color);
+}
+
+.toolbar {
+    height: 8vh;
+    background-color: var(--bg-color);
+    border: 1px solid var(--border-color);
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 10vh;
 }
 
 .generate {
-    display: block;
+    display: flex;
+    margin: 0;
+    padding: 0;
     width: 20%;
-    height: 60px;
+    height: 100%;
     background-color: transparent;
-    border: 2px solid #2c2c2c;
-    border-radius: 12px;
+    border: 1px solid var(--border-color);
     font-size: large;
     cursor: pointer;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
     font-family: 'Inter', sans-serif;
-    padding-bottom: 10px;
 }
 
 .generate:hover {
-    border-color: white;
+    background-color: rgba(0, 0, 0, 0.1);
     transition: 0.5s ease;
 }
 
@@ -41,7 +64,7 @@ body {
     justify-items: center;
     justify-content: center;
     width: 100%;
-    height: 70vh;
+    height: 82vh;
     border: none;
     margin: 0;
     padding: 0;
@@ -49,10 +72,23 @@ body {
 
 .gen-color {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    display: flex;
     width: 20%;
     height: 100%;
-    justify-items: center;
-    justify-content: center;
-    align-items: center;
     transition: background-color 0.3s ease;
+    position: relative;
+}
+
+.hex-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.copy-icon {
+    font-size: 1.2rem;
+    cursor: pointer;
 }
