--- a/frontend/main.css
+++ b/frontend/main.css
@@ -1,7 +1,6 @@
 :root {
-    --bg-color: #FCFFFD;
+    --bg-color-1: #FCFFFD;
     --border-color: rgb(163, 165, 170);
-    --aquamarine: #a5ffd6ff;
     --battleship-gray: #817f75ff;
 }
 
@@ -10,7 +9,7 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: var(--bg-color);
-    font-family: 'Inter', sans-serif;
+    font-family: 'DM Sans', sans-serif;
     overflow-x: hidden;
 }
 
@@ -50,7 +49,7 @@ body {
     cursor: pointer;
     align-items: center;
     justify-content: center;
-    font-family: 'Inter', sans-serif;
+    font-family: 'DM Sans', sans-serif;
 }
 
 .generate:hover {
@@ -64,7 +63,7 @@ body {
     justify-items: center;
     justify-content: center;
     width: 100%;
-    height: 82vh;
+    height: 84vh;
     border: none;
     margin: 0;
     padding: 0;
@@ -91,4 +90,67 @@ body {
 .copy-icon {
     font-size: 1.2rem;
     cursor: pointer;
+}
+
+.logo-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90%;
+  width: 15%;
+  position: relative;
+  padding-top: 3px;
+  padding-left: 16px;
+  gap: 0px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.logo-text {
+  height: 70%;
+  object-fit: contain;
+}
+
+.logo-drop {
+  height: 60%;
+  transition: transform 0.4s ease;
+}
+
+.logo-wrapper:hover .logo-drop {
+  animation: smoothDropAndReturn 1.0s ease-in-out;
+}
+
+@keyframes smoothDropAndReturn {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  30% {
+    transform: translateY(60px);
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(-40px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.gen-color:nth-child(1) {
+  background-color: #eeeeee;
+}
+.gen-color:nth-child(2) {
+  background-color: #d6d6d6;
+}
+.gen-color:nth-child(3) {
+  background-color: #b7b7b7;
+}
+.gen-color:nth-child(4) {
+  background-color: #7b7b7b;
+}
+.gen-color:nth-child(5) {
+  background-color: #5f5f5f;
 }
